--- a/README.ipynb
+++ b/README.ipynb
@@ -7,7 +7,7 @@
     "# soilgrids\n",
     "\n",
     "This package provides a minimal wrapper for the ISRIC Soilgrids API, allowing \n",
-    "users to query soil properties at a particular location and to perform basic \n",
+    "users to query soil properties by latitude/longitude and to perform basic \n",
     "analyses on the returned data.\n",
     "\n",
     "Functions:\n",
@@ -30,253 +30,24 @@
     "within roughly 25km of \n",
     "[Herning, Denmark](https://en.wikipedia.org/wiki/Herning). Note that points can \n",
     "be queried at a maximum rate of 5/minute, so the following code takes about 10 \n",
-    "minutes to run."
+    "minutes to run:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>soil_property</th>\n",
-       "      <th>d_factor</th>\n",
-       "      <th>mapped_units</th>\n",
-       "      <th>target_units</th>\n",
-       "      <th>uncertainty_unit</th>\n",
-       "      <th>depth</th>\n",
-       "      <th>top_depth</th>\n",
-       "      <th>bottom_depth</th>\n",
-       "      <th>unit_depth</th>\n",
-       "      <th>mean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>56.320075</td>\n",
-       "      <td>8.884830</td>\n",
-       "      <td>clay</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>0-5cm</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>56.320075</td>\n",
-       "      <td>8.884830</td>\n",
-       "      <td>clay</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>5-15cm</td>\n",
-       "      <td>5</td>\n",
-       "      <td>15</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>56.320075</td>\n",
-       "      <td>8.884830</td>\n",
-       "      <td>clay</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>15-30cm</td>\n",
-       "      <td>15</td>\n",
-       "      <td>30</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>56.320075</td>\n",
-       "      <td>8.884830</td>\n",
-       "      <td>ocs</td>\n",
-       "      <td>10</td>\n",
-       "      <td>t/ha</td>\n",
-       "      <td>kg/m²</td>\n",
-       "      <td></td>\n",
-       "      <td>0-30cm</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>56.320075</td>\n",
-       "      <td>8.884830</td>\n",
-       "      <td>sand</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>0-5cm</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>56.391902</td>\n",
-       "      <td>9.198561</td>\n",
-       "      <td>sand</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>5-15cm</td>\n",
-       "      <td>5</td>\n",
-       "      <td>15</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>56.391902</td>\n",
-       "      <td>9.198561</td>\n",
-       "      <td>sand</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>15-30cm</td>\n",
-       "      <td>15</td>\n",
-       "      <td>30</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>56.391902</td>\n",
-       "      <td>9.198561</td>\n",
-       "      <td>silt</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>0-5cm</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>56.391902</td>\n",
-       "      <td>9.198561</td>\n",
-       "      <td>silt</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>5-15cm</td>\n",
-       "      <td>5</td>\n",
-       "      <td>15</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>56.391902</td>\n",
-       "      <td>9.198561</td>\n",
-       "      <td>silt</td>\n",
-       "      <td>10</td>\n",
-       "      <td>g/kg</td>\n",
-       "      <td>%</td>\n",
-       "      <td></td>\n",
-       "      <td>15-30cm</td>\n",
-       "      <td>15</td>\n",
-       "      <td>30</td>\n",
-       "      <td>cm</td>\n",
-       "      <td>156</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>500 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          lat       lon soil_property  d_factor mapped_units target_units  \\\n",
-       "0   56.320075  8.884830          clay        10         g/kg            %   \n",
-       "1   56.320075  8.884830          clay        10         g/kg            %   \n",
-       "2   56.320075  8.884830          clay        10         g/kg            %   \n",
-       "3   56.320075  8.884830           ocs        10         t/ha        kg/m²   \n",
-       "4   56.320075  8.884830          sand        10         g/kg            %   \n",
-       "..        ...       ...           ...       ...          ...          ...   \n",
-       "5   56.391902  9.198561          sand        10         g/kg            %   \n",
-       "6   56.391902  9.198561          sand        10         g/kg            %   \n",
-       "7   56.391902  9.198561          silt        10         g/kg            %   \n",
-       "8   56.391902  9.198561          silt        10         g/kg            %   \n",
-       "9   56.391902  9.198561          silt        10         g/kg            %   \n",
-       "\n",
-       "   uncertainty_unit    depth  top_depth  bottom_depth unit_depth  mean  \n",
-       "0                      0-5cm          0             5         cm    80  \n",
-       "1                     5-15cm          5            15         cm    74  \n",
-       "2                    15-30cm         15            30         cm    96  \n",
-       "3                     0-30cm          0            30         cm    58  \n",
-       "4                      0-5cm          0             5         cm   782  \n",
-       "..              ...      ...        ...           ...        ...   ...  \n",
-       "5                     5-15cm          5            15         cm   742  \n",
-       "6                    15-30cm         15            30         cm   740  \n",
-       "7                      0-5cm          0             5         cm   159  \n",
-       "8                     5-15cm          5            15         cm   152  \n",
-       "9                    15-30cm         15            30         cm   156  \n",
-       "\n",
-       "[500 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 21\u001b[0m\n\u001b[1;32m     10\u001b[0m     sg \u001b[38;5;241m=\u001b[39m SoilGrids()\n\u001b[1;32m     12\u001b[0m     sg\u001b[38;5;241m.\u001b[39mget_points_sample(\n\u001b[1;32m     13\u001b[0m         \u001b[38;5;241m50\u001b[39m,\n\u001b[1;32m     14\u001b[0m         lat_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m56.225297\u001b[39m, lat_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m55.958103\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     18\u001b[0m         value\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     19\u001b[0m     )\n\u001b[0;32m---> 21\u001b[0m \u001b[43msg\u001b[49m\u001b[38;5;241m.\u001b[39mdata \\\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;241m.\u001b[39mfilter([\n\u001b[1;32m     23\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlat\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlon\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msoil_property\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmapped_units\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m     24\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget_units\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdepth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     25\u001b[0m     ])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sg' is not defined"
+     ]
     }
    ],
    "source": [
@@ -286,6 +57,8 @@
     "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #\n",
     "\n",
     "from soilgrids import SoilGrids\n",
+    "import pandas as pd\n",
+    "\n",
     "\n",
     "sg = SoilGrids()\n",
     "\n",
@@ -298,7 +71,11 @@
     "    value='mean'\n",
     ")\n",
     "\n",
-    "sg.data"
+    "sg.data \\\n",
+    "    .filter([\n",
+    "        'lat', 'lon', 'soil_property', 'mapped_units', \n",
+    "        'target_units', 'depth', 'mean'\n",
+    "    ])"
    ]
   },
   {
@@ -763,9 +540,9 @@
    "source": [
     "## Disclaimers\n",
     "\n",
-    "Use of this package is subject to [ISRIC data and software policy](https://www.isric.org/about/data-policy).\n",
+    "*   Use of this package is subject to [ISRIC data and software policy](https://www.isric.org/about/data-policy).\n",
     "\n",
-    "This package is licensed as [GPL-2](LICENSE)."
+    "*   This package is licensed as [GPL-2](LICENSE)."
    ]
   }
  ],
