--- a/README.qmd
+++ b/README.qmd
@@ -38,19 +38,18 @@ minutes to run:
 ```{python}
 #| output: asis
 
-from soilgrids import SoilGrids
-import pandas as pd
-
 # ~~~ Tweak some settings for cleaner notebook results ~~~ #
 import logging
 logging.getLogger('soilgrids').setLevel(logging.ERROR)
-# pd.options.display.notebook_repr_html = False
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #
+
+from soilgrids import SoilGrids
+import pandas as pd
 
 sg = SoilGrids()
 
 sg.get_points_sample(
-    3,
+    50,
     lat_min=56.225297, lat_max=55.958103,
     lon_min=8.662215, lon_max=9.354390,
     soil_property=['clay', 'sand', 'silt', 'ocs'],
@@ -58,14 +57,13 @@ sg.get_points_sample(
     value='mean'
 )
 
-df = sg.data \
+data = sg.data \
     .filter([
         'lat', 'lon', 'soil_property', 'mapped_units', 
         'target_units', 'depth', 'mean'
-    ]) \
-    .to_markdown()
+    ])
 
-print(df)
+print(data.to_markdown(index=False))
 ```
 
 ## Get the property (clay, sand, silt) with the highest value for each point
@@ -74,7 +72,11 @@ the most abundant soil type (i.e. property) for each point. In this case, we
 see that the Herning region is quite sandy:
 
 ```{python}
-sg.main_properties()
+#| output: asis
+
+main_properties = sg.main_properties()
+
+print(main_properties.to_markdown(index=False))
 ```
 
 ## Relationship between clay, sand, silt and organic carbon stock
