--- a/README.ipynb
+++ b/README.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,56 @@
       "text/markdown": [
        "|     lat |     lon | soil_property   |\n",
        "|--------:|--------:|:----------------|\n",
-       "| 56.4323 | 8.80164 | sand            |"
+       "| 56.227  | 8.95852 | sand            |\n",
+       "| 56.2282 | 8.78386 | sand            |\n",
+       "| 56.239  | 8.8889  | sand            |\n",
+       "| 56.2432 | 9.01111 | sand            |\n",
+       "| 56.2581 | 8.76906 | sand            |\n",
+       "| 56.2614 | 9.31379 | sand            |\n",
+       "| 56.2721 | 9.08447 | sand            |\n",
+       "| 56.2824 | 9.16308 | sand            |\n",
+       "| 56.2889 | 8.81124 | sand            |\n",
+       "| 56.2929 | 8.72278 | sand            |\n",
+       "| 56.2946 | 8.96107 | sand            |\n",
+       "| 56.3012 | 9.21258 | sand            |\n",
+       "| 56.302  | 8.86036 | sand            |\n",
+       "| 56.3059 | 9.27081 | sand            |\n",
+       "| 56.3111 | 8.72808 | sand            |\n",
+       "| 56.3184 | 9.05734 | sand            |\n",
+       "| 56.3209 | 9.108   | sand            |\n",
+       "| 56.3273 | 8.74746 | sand            |\n",
+       "| 56.3285 | 8.86959 | sand            |\n",
+       "| 56.329  | 9.02623 | sand            |\n",
+       "| 56.3359 | 8.91845 | sand            |\n",
+       "| 56.3488 | 9.13769 | sand            |\n",
+       "| 56.3513 | 9.26886 | sand            |\n",
+       "| 56.3524 | 8.88601 | sand            |\n",
+       "| 56.3581 | 8.96305 | sand            |\n",
+       "| 56.3661 | 9.31728 | sand            |\n",
+       "| 56.3666 | 8.93146 | sand            |\n",
+       "| 56.3691 | 8.93212 | sand            |\n",
+       "| 56.3707 | 9.31411 | sand            |\n",
+       "| 56.3735 | 9.05815 | sand            |\n",
+       "| 56.3759 | 8.79767 | sand            |\n",
+       "| 56.3892 | 8.86646 | sand            |\n",
+       "| 56.3925 | 9.27119 | sand            |\n",
+       "| 56.3937 | 9.02506 | sand            |\n",
+       "| 56.3949 | 8.80218 | sand            |\n",
+       "| 56.4194 | 9.28738 | sand            |\n",
+       "| 56.4219 | 8.82862 | sand            |\n",
+       "| 56.4322 | 9.05632 | sand            |\n",
+       "| 56.4358 | 8.69287 | sand            |\n",
+       "| 56.446  | 8.69823 | sand            |\n",
+       "| 56.4538 | 8.751   | sand            |\n",
+       "| 56.4597 | 9.28579 | sand            |\n",
+       "| 56.4727 | 8.95341 | sand            |\n",
+       "| 56.4727 | 9.0427  | sand            |\n",
+       "| 56.4734 | 8.71213 | sand            |\n",
+       "| 56.4775 | 9.23639 | sand            |\n",
+       "| 56.4795 | 8.8428  | sand            |\n",
+       "| 56.4816 | 9.12634 | sand            |\n",
+       "| 56.4885 | 9.35333 | sand            |\n",
+       "| 56.4891 | 8.81222 | sand            |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -145,9 +194,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Call:\n",
+      "lm(formula = clay + sand + silt ~ ocs, data = input_data)\n",
+      "\n",
+      "Residuals:\n",
+      "    Min      1Q  Median      3Q     Max \n",
+      "-1.2765 -0.2709 -0.2256  0.7589  1.7634 \n",
+      "\n",
+      "Coefficients:\n",
+      "             Estimate Std. Error t value Pr(>|t|)    \n",
+      "(Intercept) 1.000e+03  1.123e+00 890.668   <2e-16 ***\n",
+      "ocs         4.424e-03  1.967e-02   0.225    0.823    \n",
+      "---\n",
+      "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+      "\n",
+      "Residual standard error: 0.8302 on 48 degrees of freedom\n",
+      "Multiple R-squared:  0.001053,\tAdjusted R-squared:  -0.01976 \n",
+      "F-statistic: 0.05058 on 1 and 48 DF,  p-value: 0.823\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(sg.ocs_correlation(capture_output=True))"
    ]
