--- a/README.ipynb
+++ b/README.ipynb
@@ -188,8 +188,8 @@
     "\n",
     "The `ocs_correlation()` method fits and displays summary statistics for a linear \n",
     "model with sand, clay and silt as predictors and OCS as the response variable. \n",
-    "In this case, we find these soil properties are quite effective at predicting \n",
-    "OCS, explaining around 90% of the variance:"
+    "Based on the R-squared values returned in the summary, it doesn't look like\n",
+    "these soil properties are particularly good predictors for OCS in this case:"
    ]
   },
   {
