readme working tweak

--- a/README.ipynb
+++ b/README.ipynb
@@ -7,7 +7,7 @@
     "# soilgrids\n",
     "\n",
     "This package provides a minimal wrapper for the ISRIC Soilgrids API, allowing \n",
-    "users to query soil properties by latitude/longitude and to perform basic \n",
+    "users to query soil properties by latitude/longitude and perform basic \n",
     "analyses on the returned data.\n",
     "\n",
     "Functions:\n",
