Update seaborn method to plotly and update readme

--- a/README.ipynb
+++ b/README.ipynb
@@ -75,14 +75,14 @@
     "import logging\n",
     "import plotly.offline as po\n",
     "import plotly.io as pio\n",
-    "from IPython.display import Markdown as md\n",
+    "from IPython.display import Markdown, Image\n",
     "from soilgrids import SoilGrids\n",
     "\n",
     "# Turn off console logs for cleaner notebook output\n",
     "logging.getLogger('soilgrids').setLevel(logging.ERROR)\n",
     "\n",
     "# Helper for displaying tables as markdown\n",
-    "show = lambda df: display(md(df.to_markdown(index=False)))\n",
+    "show = lambda df: display(Markdown(df.to_markdown(index=False)))\n",
     "\n",
     "sg = SoilGrids()\n",
     "\n",
@@ -240,6 +240,9 @@
    "metadata": {},
    "source": [
     "## Additional features\n",
+    "\n",
+    "### `SoilGrids.plot_ocs_property_relationships()`\n",
+    "\n",
     "The `plot_ocs_property_relationships()` method can be used to obtain a graphical\n",
     "representation of the relationships between OCS and the other soil properties \n",
     "present in the data. These are displayed as scatterplots with overlayed lines\n",
@@ -273,13 +276,18 @@
     }
    ],
    "source": [
-    "sg.plot_ocs_property_relationships()"
+    "fig = sg.plot_ocs_property_relationships()\n",
+    "\n",
+    "fig.write_image(\"README_files/ocs_property_relationships.png\")\n",
+    "Image(\"README_files/ocs_property_relationships.png\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## `SoilGrids.plot_property_map()`\n",
+    "\n",
     "The `plot_property_map()` method can display the points as they appear \n",
     "geographically. The points are sized according to the value of the property\n",
     "you choose to plot, and the tooltip displays the values for other properties\n",
@@ -307,8 +315,6 @@
     "fig = sg.plot_property_map('ocs', zoom=8)\n",
     "\n",
     "fig.write_image(\"README_files/property_map.png\")\n",
-    "\n",
-    "from IPython.display import Image\n",
     "Image(\"README_files/property_map.png\")"
    ]
   },
