--- a/README.ipynb
+++ b/README.ipynb
@@ -241,7 +241,7 @@
    "source": [
     "## Additional features\n",
     "\n",
-    "### `SoilGrids.plot_ocs_property_relationships()`\n",
+    "### Method `SoilGrids.plot_ocs_property_relationships()`\n",
     "\n",
     "The `plot_ocs_property_relationships()` method can be used to obtain a graphical\n",
     "representation of the relationships between OCS and the other soil properties \n",
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `SoilGrids.plot_property_map()`\n",
+    "### Method `SoilGrids.plot_property_map()`\n",
     "\n",
     "The `plot_property_map()` method can display the points as they appear \n",
     "geographically. The points are sized according to the value of the property\n",
