rewording in readme

--- a/README.ipynb
+++ b/README.ipynb
@@ -319,7 +319,7 @@
    "source": [
     "## Disclaimers\n",
     "\n",
-    "*   Use of this package is subject to [ISRIC data and software policy](https://www.isric.org/about/data-policy).\n",
+    "*   Use of Soilgrids data is subject to [ISRIC data and software policy](https://www.isric.org/about/data-policy).\n",
     "*   This package is licensed as [GPL-2](LICENSE)."
    ]
   }
