rewording in readme

--- a/README.ipynb
+++ b/README.ipynb
@@ -29,12 +29,12 @@
     "\n",
     "## Querying data using `SoilGrids`\n",
     "\n",
-    "The following code reads in the mean values for clay, sand, silt and organic \n",
-    "carbon stock (ocs) in the top 30cm of soil for a random set of 50 points \n",
+    "The following code reads in the mean values for clay, sand, silt, and organic \n",
+    "carbon stock (OCS) in the top 30cm of soil for a random set of 50 points \n",
     "within roughly 25km of \n",
-    "[Herning, Denmark](https://en.wikipedia.org/wiki/Herning). Note that points can \n",
-    "be queried at a maximum rate of 5/minute, so the following code takes about 10 \n",
-    "minutes to run:"
+    "[Herning, Denmark](https://en.wikipedia.org/wiki/Herning). Points can be queried \n",
+    "at a maximum rate of 5/minute, so the following code takes about 10 minutes to \n",
+    "run:"
    ]
   },
   {
@@ -72,11 +72,11 @@
     }
    ],
    "source": [
-    "import logging\n",
-    "import plotly.offline as po\n",
-    "import plotly.io as pio\n",
     "from IPython.display import Markdown, Image\n",
     "from soilgrids import SoilGrids\n",
+    "import logging\n",
+    "import plotly.io as pio\n",
+    "import plotly.offline as po\n",
     "\n",
     "# Turn off console logs for cleaner notebook output\n",
     "logging.getLogger('soilgrids').setLevel(logging.ERROR)\n",
@@ -86,6 +86,9 @@
     "\n",
     "sg = SoilGrids()\n",
     "\n",
+    "# get_points_sample() reads in a uniformly distributed random sample of\n",
+    "# points within specified bounds. If you want to query an exact set of\n",
+    "# points, you can use `SoilGrids.get_points()`.\n",
     "sg.get_points_sample(\n",
     "    50,\n",
     "    lat_a=56.225297, lon_a=8.662215,\n",
@@ -95,7 +98,8 @@
     "    value='mean'\n",
     ")\n",
     "\n",
-    "# For brevity, only a subset of the data is shown\n",
+    "# Once Soilgrids has been queried, the results are accessible using the \n",
+    "# `data` property. For brevity, only a subset of the data is shown here.\n",
     "show(sg.data[0:15].filter([\n",
     "    'lat', 'lon', 'soil_property', 'mapped_units', \n",
     "    'target_units', 'depth', 'mean'\n",
