--- a/README.ipynb
+++ b/README.ipynb
@@ -321,6 +321,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Testing\n",
+    "\n",
+    "This package is thoroughly tested using \n",
+    "[pytest](https://docs.pytest.org/en/7.4.x/). To run the test suite, use:\n",
+    "\n",
+    "```bash\n",
+    "python -m pytest tests\n",
+    "```\n",
+    "\n",
     "## Disclaimers\n",
     "\n",
     "*   Use of Soilgrids data is subject to [ISRIC data and software policy](https://www.isric.org/about/data-policy).\n",
