Re-create depth col in aggregate_means()

--- a/README.ipynb
+++ b/README.ipynb
@@ -321,6 +321,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Method `SoilGrids.aggregate_means()`\n",
+    "\n",
+    "Working with data from SoilGrids poses a challenge since different soil \n",
+    "properties are measured at different levels of granularity. For instance, the\n",
+    "data returned by Soilgrids might look something like this:\n",
+    "\n",
+    "| Property         | Measurement            |\n",
+    "|------------------|------------------------|\n",
+    "| ocs              | 0-30cm                 |\n",
+    "| clay             | 0-5cm                  |\n",
+    "| clay             | 5-15cm                 |\n",
+    "| clay             | 15-30cm                |\n",
+    "\n",
+    "In order to easily compare, say, `ocs` with `clay`, it is thus necessary to\n",
+    "aggregate the values for `clay` to get a representative measurement for the \n",
+    "whole 0-30cm. However, the 3 values for clay cover 5, 10 and 15 cm of depth\n",
+    "respectively, so they must be appropriately weighted when 'averaged' to get\n",
+    "a representative value for the whole 0-30 cm.\n",
+    "\n",
+    "`SoilGrids.aggregate_means()` is a utility for aggregating Soilgrids data in\n",
+    "this way, and it is used to power other methods such as \n",
+    "`plot_ocs_property_relationships()`, `plot_property_map()` and \n",
+    "`ocs_correlation()`.\n",
+    "\n",
+    "### Unaggregated data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unaggregated_data = sg.data \\\n",
+    "    .filter(['lat', 'lon', 'soil_property', 'depth', 'mean']) \\\n",
+    "    .query(\n",
+    "        \"lat == 55.968112 & lon == 9.194132 &\"\n",
+    "        \"soil_property in ['clay', 'ocs']\"\n",
+    "    )\n",
+    "    \n",
+    "show(unaggregated_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregated data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_data = sg.aggregate_means() \\\n",
+    "    .filter(['lat', 'lon', 'soil_property', 'depth', 'mean']) \\\n",
+    "    .query(\n",
+    "        \"lat == 55.968112 & lon == 9.194132 &\"\n",
+    "        \"soil_property in ['clay', 'ocs']\"\n",
+    "    )\n",
+    "    \n",
+    "show(aggregated_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Testing\n",
     "\n",
     "This package is thoroughly tested using \n",
