--- a/README.ipynb
+++ b/README.ipynb
@@ -350,9 +350,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "|     lat |     lon | soil_property   | depth   |   mean |\n",
+       "|--------:|--------:|:----------------|:--------|-------:|\n",
+       "| 55.9681 | 9.19413 | clay            | 0-5cm   |     58 |\n",
+       "| 55.9681 | 9.19413 | clay            | 5-15cm  |     49 |\n",
+       "| 55.9681 | 9.19413 | clay            | 15-30cm |     72 |\n",
+       "| 55.9681 | 9.19413 | ocs             | 0-30cm  |     54 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "unaggregated_data = sg.data \\\n",
     "    .filter(['lat', 'lon', 'soil_property', 'depth', 'mean']) \\\n",
@@ -373,9 +391,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "|     lat |     lon | soil_property   | depth   |   mean |\n",
+       "|--------:|--------:|:----------------|:--------|-------:|\n",
+       "| 55.9681 | 9.19413 | clay            | 0-30cm  |     62 |\n",
+       "| 55.9681 | 9.19413 | ocs             | 0-30cm  |     54 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "aggregated_data = sg.aggregate_means() \\\n",
     "    .filter(['lat', 'lon', 'soil_property', 'depth', 'mean']) \\\n",
