--- a/README.ipynb
+++ b/README.ipynb
@@ -343,9 +343,7 @@
     "`SoilGrids.aggregate_means()` is a utility for aggregating Soilgrids data in\n",
     "this way, and it is used to power other methods such as \n",
     "`plot_ocs_property_relationships()`, `plot_property_map()` and \n",
-    "`ocs_correlation()`.\n",
-    "\n",
-    "### Unaggregated data:"
+    "`ocs_correlation()`."
    ]
   },
   {
@@ -372,14 +370,18 @@
     }
    ],
    "source": [
-    "unaggregated_data = sg.data \\\n",
-    "    .filter(['lat', 'lon', 'soil_property', 'depth', 'mean']) \\\n",
-    "    .query(\n",
-    "        \"lat == 55.968112 & lon == 9.194132 &\"\n",
-    "        \"soil_property in ['clay', 'ocs']\"\n",
-    "    )\n",
-    "    \n",
-    "show(unaggregated_data)"
+    "small_datasets = [\n",
+    "    dataset \\\n",
+    "        .filter(['lat', 'lon', 'soil_property', 'depth', 'mean']) \\\n",
+    "        .query(\n",
+    "            \"lat == 55.968112 & lon == 9.194132 &\"\n",
+    "            \"soil_property in ['clay', 'ocs']\"\n",
+    "        )\n",
+    "    for dataset in [sg.data, sg.aggregate_means()]\n",
+    "]\n",
+    "\n",
+    "for dataset in small_datasets:\n",
+    "    show(dataset)"
    ]
   },
   {
@@ -425,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing\n",
+    "## Testing\n",
     "\n",
     "This package is thoroughly tested using \n",
     "[pytest](https://docs.pytest.org/en/7.4.x/). To run the test suite, use:\n",
