--- a/README.ipynb
+++ b/README.ipynb
@@ -324,31 +324,25 @@
     "## Method `SoilGrids.aggregate_means()`\n",
     "\n",
     "Working with data from SoilGrids poses a challenge since different soil \n",
-    "properties are measured at different levels of granularity. For instance, the\n",
-    "data returned by Soilgrids might look something like this:\n",
+    "properties are measured at different levels of granularity. For example, values\n",
+    "for clay will be provided at 0-5cm, 5-15cm, and 15-30cm, whereas OCS will be \n",
+    "provided as a single value for 0-30cm as a whole.\n",
     "\n",
-    "| Property         | Measurement            |\n",
-    "|------------------|------------------------|\n",
-    "| ocs              | 0-30cm                 |\n",
-    "| clay             | 0-5cm                  |\n",
-    "| clay             | 5-15cm                 |\n",
-    "| clay             | 15-30cm                |\n",
-    "\n",
-    "In order to easily compare, say, `ocs` with `clay`, it is thus necessary to\n",
+    "In order to easily compare, say, `ocs` with `clay`, we need to\n",
     "aggregate the values for `clay` to get a representative measurement for the \n",
     "whole 0-30cm. However, the 3 values for clay cover 5, 10 and 15 cm of depth\n",
-    "respectively, so they must be appropriately weighted when 'averaged' to get\n",
-    "a representative value for the whole 0-30 cm.\n",
+    "respectively, so we can't simply take the mean across each value.\n",
     "\n",
-    "`SoilGrids.aggregate_means()` is a utility for aggregating Soilgrids data in\n",
-    "this way, and it is used to power other methods such as \n",
-    "`plot_ocs_property_relationships()`, `plot_property_map()` and \n",
-    "`ocs_correlation()`."
+    "`SoilGrids.aggregate_means()` is a utility for aggregating Soilgrids data whilst\n",
+    "weighting individual values according to the total depth they represent, and \n",
+    "it is used to power other methods such as `plot_ocs_property_relationships()`, \n",
+    "`plot_property_map()` and `ocs_correlation()`. The following shows how values\n",
+    "are aggregated for a single point:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +386,7 @@
     "            \"lat == 55.968112 & lon == 9.194132 &\"\n",
     "            \"soil_property in ['clay', 'ocs']\"\n",
     "        )\n",
-    "    for dataset in [sg.data, sg.aggregate_means()]\n",
+    "    for dataset in [sg.data, sg.aggregate_means(top_depth=0, bottom_depth=30)]\n",
     "]\n",
     "\n",
     "for dataset in small_datasets:\n",
