--- a/README.ipynb
+++ b/README.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# soilgrids\n",
+    "# soilgrids <a name=\"introduction\"></a>\n",
     "\n",
     "This package provides a minimal wrapper for the ISRIC Soilgrids API, allowing \n",
     "users to query soil properties by latitude/longitude and perform basic \n",
@@ -27,7 +27,20 @@
     "*   ISRIC data and software policy: <https://www.isric.org/about/data-policy>\n",
     "*   Soilgrids FAQ: <https://www.isric.org/explore/soilgrids/faq-soilgrids>\n",
     "\n",
-    "## Querying data using `SoilGrids`\n",
+    "Contents:\n",
+    "\n",
+    "*   [Introduction](#introduction)\n",
+    "*   [Querying data using `SoilGrids`](#querying-data)\n",
+    "*   [Get the property (clay, sand, silt) with the highest value for each point](#top-properties)\n",
+    "*   [Relationship between clay, sand, silt and organic carbon stock](#property-relationships)\n",
+    "*   [Additional features](additional-features)\n",
+    "    *   [Method `SoilGrids.plot_ocs_property_relationships()`](#plot_ocs_property_relationships)\n",
+    "    *   [Method `SoilGrids.plot_property_map()`](#plot_property_map)\n",
+    "    *   [Method `SoilGrids.aggregate_means()`](#aggregate_means)\n",
+    "* [Testing](#testing)\n",
+    "* [Disclaimer/licensing](#disclaimer)\n",
+    "\n",
+    "## Querying data using `SoilGrids` <a name=\"querying-data\"></a>\n",
     "\n",
     "The following code reads in the mean values for clay, sand, silt, and organic \n",
     "carbon stock (OCS) in the top 30cm of soil for a random set of 50 points \n",
@@ -110,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the property (clay, sand, silt) with the highest value for each point\n",
+    "## Get the property (clay, sand, silt) with the highest value for each point <a name=\"top-properties\"></a>\n",
     "\n",
     "The `SoilGrids` class provides a handy utility `main_properties()` for finding\n",
     "the most abundant soil type (i.e. property) for each point. In this case, we\n",
@@ -194,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Relationship between clay, sand, silt and organic carbon stock\n",
+    "## Relationship between clay, sand, silt and organic carbon stock <a name=\"property-relationships\"></a>\n",
     "\n",
     "The `ocs_correlation()` method fits and displays summary statistics for a linear \n",
     "model with sand, clay and silt as predictors and OCS as the response variable. \n",
@@ -243,9 +256,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional features\n",
+    "## Additional features <a name=\"additional-features\"></a>\n",
     "\n",
-    "### Method `SoilGrids.plot_ocs_property_relationships()`\n",
+    "### Method `SoilGrids.plot_ocs_property_relationships()` <a name=\"plot_ocs_property_relationships\"></a>\n",
     "\n",
     "The `plot_ocs_property_relationships()` method can be used to obtain a graphical\n",
     "representation of the relationships between OCS and the other soil properties \n",
@@ -285,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method `SoilGrids.plot_property_map()`\n",
+    "### Method `SoilGrids.plot_property_map()` <a name=\"plot_property_map\"></a>\n",
     "\n",
     "The `plot_property_map()` method can display the points as they appear \n",
     "geographically. The points are sized according to the value of the property\n",
@@ -321,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method `SoilGrids.aggregate_means()`\n",
+    "### Method `SoilGrids.aggregate_means()` <a name=\"aggregate_means\"></a>\n",
     "\n",
     "Working with data from SoilGrids poses a challenge since different soil \n",
     "properties are measured at different levels of granularity. For example, values\n",
@@ -397,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing\n",
+    "## Testing <a name=\"testing\"></a>\n",
     "\n",
     "This package is thoroughly tested using \n",
     "[pytest](https://docs.pytest.org/en/7.4.x/). To run the test suite, use:\n",
@@ -406,7 +419,7 @@
     "python -m pytest tests\n",
     "```\n",
     "\n",
-    "## Disclaimers\n",
+    "## Disclaimer/licensing <a name=\"disclaimer\"></a>\n",
     "\n",
     "*   Use of Soilgrids data is subject to [ISRIC data and software policy](https://www.isric.org/about/data-policy).\n",
     "*   This package is licensed as [GPL-2](LICENSE)."
