--- a/README.ipynb
+++ b/README.ipynb
@@ -31,8 +31,8 @@
     "\n",
     "*   [Introduction](#introduction)\n",
     "*   [Querying data using `SoilGrids`](#querying-data)\n",
-    "*   [Get the property (clay, sand, silt) with the highest value for each point](#top-properties)\n",
-    "*   [Relationship between clay, sand, silt and organic carbon stock](#property-relationships)\n",
+    "*   [Getting the property (clay, sand, silt) with the highest value for each point](#top-properties)\n",
+    "*   [Analysing the relationship between clay, sand, silt and organic carbon stock](#property-relationships)\n",
     "*   [Additional features](additional-features)\n",
     "    *   [Method `SoilGrids.plot_ocs_property_relationships()`](#plot_ocs_property_relationships)\n",
     "    *   [Method `SoilGrids.plot_property_map()`](#plot_property_map)\n",
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the property (clay, sand, silt) with the highest value for each point <a name=\"top-properties\"></a>\n",
+    "## Getting the property (clay, sand, silt) with the highest value for each point <a name=\"top-properties\"></a>\n",
     "\n",
     "The `SoilGrids` class provides a handy utility `main_properties()` for finding\n",
     "the most abundant soil type (i.e. property) for each point. In this case, we\n",
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Relationship between clay, sand, silt and organic carbon stock <a name=\"property-relationships\"></a>\n",
+    "## Analysing the relationship between clay, sand, silt and organic carbon stock <a name=\"property-relationships\"></a>\n",
     "\n",
     "The `ocs_correlation()` method fits and displays summary statistics for a linear \n",
     "model with sand, clay and silt as predictors and OCS as the response variable. \n",
